--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
+    <title>202410863 - Albaña, Mark Edrian R. - IT1C</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
